# walle-service

./: .gitignore  .travis.yml  CODE-REVIEW-POLICY.rst  Dockerfile  Dockerfilev3  HOW-TO-RUN-JMETER-TESTPLAN.rst  README.md  RUN-LOCAL-CFY-IN-DOCKER.rst  blueprint.yaml  circle.yml  release_notes_1.2.0m1.rst  release_notes_1.2.1m1.rst  release_notes_1.2.1m2.rst  release_notes_1.2.1m3.rst  release_notes_1.2.1m4.rst  release_notes_1.2.1m5.rst  release_notes_template.rst  supervisord.conf
score-api-server/: .gitignore  README.rst  __init__.py  cfy-requirements.txt  dev-requirements.txt  init.sh  initial.sql  real-mode-tests-conf.yaml  requirements.txt  run.py  setup.cfg  setup.py  test-requirements.txt  test_status.py  tox.ini
score-api-server/migrations/: env.py
score-api-server/migrations/versions/: 18ad57c58379_.py  1dba57a5105b_.py  24b18f82b635_.py  39f07a5268ab_.py  4d1350114aac_.py  4fa2340e9beb_.py
score-api-server/score_api_server/: __init__.py  app.py
score-api-server/score_api_server/cli/: app.py  manage.py
score-api-server/score_api_server/common/: cfg.py  keystore_limit.py  org_limit.py  service_limit.py  util.py  utils.py
score-api-server/score_api_server/db/: base.py  models.py
score-api-server/score_api_server/resources/: __init__.py  blueprints.py  deployments.py  events.py  executions.py  login.py  login_openstack.py  login_score.py  login_vcloud.py  manage.py  models.py  requests_schema.py  resources.py  responses.py  (+3 more)
score-api-server/types/: types.yaml
walle-api-server/: README.rst  cfy-requirements.txt  dev-requirements.txt  init.sh  real-mode-tests-conf.yaml.template  requirements.txt  setup.cfg  setup.py  tox.ini
walle-api-server/migrations/: alembic.ini
walle-api-server/walle_api_server/: __init__.py
(+216 files in other folders)
