[metadata]
name = score-service
version = 1.2.1
summary = vCloud Score-service
description-file =
    README.rst
author = VMware

classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

requires-python = >=2.7

[files]
packages =
     score_api_server
     score_api_server.resources

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[entry_points]
console_scripts =
        score-server = score_api_server.cli.app:main
        score-manage = score_api_server.cli.manage:main
