[metadata]
name = walle-service
version = 1.4rc1
summary = vCloud/OpenStack Walle-service
description-file =
    README.rst
author = VMware, Cloudify

classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

requires-python = >=2.7

[files]
packages =
     walle_api_server
     walle_api_server.resources

[global]
setup-hooks =
    pbr.hooks.setup_hook

[wheel]
universal = 1

[entry_points]
console_scripts =
        walle-server = walle_api_server.cli.app:main
        walle-manage = walle_api_server.cli.manage:main
